--- a/css/template.css
+++ b/css/template.css
@@ -1,6 +1,8 @@
 body {
     padding-top: 5rem;
+    background-image: url("../images/background.jpg");
   }
+
   .starter-template {
     padding: 3rem 1.5rem;
     text-align: center;
