added blog template and finished contact us form

--- a/css/template.css
+++ b/css/template.css
@@ -21,4 +21,12 @@ body {
     font-size: 30px;
     font-style: italic;
   }
+
+  label{
+    font-weight: bold;
+  }
   
+  .error {
+    color: red;
+    font-size: 90%;
+    }
